# podlogs

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/k8s/: client.rs  clusters.rs  deployments.rs  logs.rs  mod.rs  namespaces.rs  pods.rs
src-tauri/src/models/: cluster.rs  log.rs  mod.rs  pod.rs
src/components/common/: Badge.tsx  Button.tsx  Drawer.tsx  Dropdown.tsx  ErrorDialog.tsx  Input.tsx  Modal.tsx  Skeleton.tsx
src/components/deployments/: DeploymentDetails.tsx  DeploymentList.tsx
src/components/layout/: MainLayout.tsx  Sidebar.tsx  StatusBar.tsx
src/components/logs/: LogDetailModal.tsx  LogSearch.tsx  LogViewer.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: useK8s.ts  useLogs.ts  useTheme.ts
src/lib/: constants.ts  formatters.ts  tauri.ts
src/stores/: clusterStore.ts  errorStore.ts  uiStore.ts
src/types/: kubernetes.ts  logs.ts
