[package]
name = "podlogs"
version = "1.0.0"
description = "Kubernetes Pod Log Viewer"
authors = ["PodLogs"]
edition = "2021"

[lib]
name = "podlogs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
kube = { version = "0.98", features = ["client", "config", "runtime"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dirs = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
